fix(css bug): page layout bug fixed

--- a/client/src/Components/components.less
+++ b/client/src/Components/components.less
@@ -148,7 +148,9 @@
 //stats comp
 
 .stats-list {
-  margin: 20px 0;
+  margin-top: 20px;
+  max-width: 400px;
+  width: 80vw;
 }
 .stats-item {
   margin-top: 10px;
@@ -166,6 +168,9 @@
 }
 
 .chart {
+  margin-top: 20px;
+  max-width: 400px;
+  width: 80vw;
   box-shadow: @boxShadow;
   padding: 20px;
   background: white;
